--- a/extensions/content.css
+++ b/extensions/content.css
@@ -1,10 +1,29 @@
-a.toLighthouse,
-a.toOpenWork {
-  padding-left: 0.5rem;
+div.Extension-content {
+  margin-top: 30px;
+  padding: 0.5rem;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-a.toLighthouse > img,
-a.toOpenWork > img {
-  width: 1.2rem;
-  height: 1.2rem;
+div.Extension-content__item {
+  height: 100%;
+  padding: 0 1.5rem;
+}
+
+div.Extension-content a {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+html[data-theme="light"] div.Extension-content__item,
+html[data-theme="light"] div.Extension-content a {
+  color: #0000008A;
+}
+
+html[data-theme="dark"] div.Extension-content__item,
+html[data-theme="dark"] div.Extension-content a {
+  color: #FFFFFFB3;
 }
